# vkgame

./: Cargo.toml  README.md  arena.json  benoit.json  debug.json  debug2.json  here  imgui.ini  scene.json  scene2.json  test.json
assets/levels/: arena.json  scene1.json  shadow.json
assets/models/: arena.blend  arena.blend1  arena.mtl
assets/shaders/: deferred.frag  gui.frag  gui.vert  outline.frag  pick.frag  pick.vert  point_light.frag  pushconstants.vert  quad.vert  skybox.vert  skybox_color.frag
docs/: art.md  graphics.md  network.md  problems.md  todos.md
examples/: compute.rs  udp_client.rs  udp_server.rs
logs/: first_player  first_player2  second_player  server_log2
shaders/: ambient_light.vert  cube.vert  deferred.frag  edge.frag  edge.vert  gui.vert  main.frag  main.vert  mvp.vert  outline.vert  point_light.frag  point_light.vert  skybox.frag  skybox.vert  skybox_color.frag
src/: camera.rs  config.rs  error.rs  event.rs  gameobject.rs  input.rs  lib.rs  loader.rs  main.rs  model.rs  render.rs  resource.rs  scene.rs  ser.rs  sync.rs  time.rs
src/collections/: mod.rs  option_array.rs  ring_buffer.rs
src/ecs/: components.rs  gen_index.rs  mod.rs  systems.rs
src/editor/: config_window.rs  file_select.rs  loop.rs  mod.rs
src/net/: client.rs  codec.rs  delta.rs  main.rs  mod.rs  protocol.rs  server.rs  snapshot.rs  system.rs
src/physics/: mod.rs
src/renderer/: ambient_lighting_system.rs  attachments.rs  debug_system.rs  directional_lighting_system.rs  mod.rs  model.rs  pick.rs  point_lighting_system.rs  ui.rs  (+6 more)
templates/: template_test.json
(+24 files in other folders)
