[package]
name = "benoit"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
name = "twgraph"

[dependencies]
# The `vulkano` crate is the main crate that you must use to use Vulkan.
vulkano = "0.11"
# Provides the `shader!` macro that is used to generate code for using shaders.
vulkano-shaders = "0.11"
# The Vulkan library doesn't provide any functionality to create and handle windows, as
# this would be out of scope. In order to open a window, we are going to use the `winit` crate.
winit = "0.18"
# The `vulkano_win` crate is the link between `vulkano` and `winit`. Vulkano doesn't know about winit,
# and winit doesn't know about vulkano, so import a crate that will provide a link between the two.
vulkano-win = "0.11"

cgmath = "0.16.1"
image = "0.20.0"
time = "0.1.38"

# Loading .obj 3d models
tobj = "0.1.6"

# For serialization :0
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

